Make service URLs configurable and clean tests

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ DATABASE_PATH=cryptopilot.sqlite
 EXPRESS_SERVER_URL=http://localhost:5002
 FLASK_SERVER_URL=http://localhost:5001
 TEST_DATABASE_PATH=cryptopilot_test.sqlite
+ROBINHOOD_BALANCE_URL=http://localhost:5001/api/robinhood-balance
+ROBINHOOD_LAST_TRADE_URL=http://localhost:5001/api/robinhood-last-trade
+ROBINHOOD_AUTHENTICATE_URL=http://localhost:5001/api/authenticate-robinhood
